[package]
name = "kcpgateway_new"
version = "0.1.0"
edition = "2021"
build="build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["flexi_log"]
flexi_log=["flexi_logger"]
env_log=["env_logger"]
unity=[]

[dependencies]
tokio = {version="1",features=["full"]}
aqueue = "1.2"
anyhow = "1"
kcpserver = "1.1"
tcpclient = "1.4"
bi-directional-pipe = "0.1"
lazy_static = "1.4"
chrono="0.4"
mimalloc = "0.1"
ahash = "0.8"
log = "0.4"
data-rw="1.6"
bytes="1.1"
serde={version="1",features=["derive"]}
serde_json="1"
clap = { version = "4", features = ["derive"] }
flexi_logger={version= "0.25",features=["async"],optional =true}
env_logger = {version= "0.10",optional =true}
async-trait = "0.1"
once_cell = "1.13"

[build-dependencies]
anyhow="1.0"
vergen= "7"

[profile.release]
panic="abort"
lto = true
codegen-units = 1